faq wrapping fix

--- a/static/less/cases.less
+++ b/static/less/cases.less
@@ -147,6 +147,15 @@ ul.header-details li {
   list-style: none;
 }
 
+td.value-answer {
+  word-break: break-word;
+}
+td.value-question {
+  min-width: 100px;
+  max-width: 300px;
+  word-wrap: break-word;
+}
+
 .loading {
   background: url('../img/loading.gif') no-repeat center center;
   margin: 12px;
